[project]
name = "kion"
version = "0.1.0"
description = ""
authors = [
    {name = "DiMiRka",email = "fallen_94@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[uvicorn] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "mmh3 (>=5.1.0,<6.0.0)",
    "bitarray (>=3.3.1,<4.0.0)",
    "locust (>=2.34.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
